Remove Apache dependency
over 540KB freed!